# negotiator

./: CHANGELOG.md  Cargo.toml  README.md
src/: charset.rs  common.rs  encoding.rs  language.rs  lib.rs  media_type.rs
tests/: integration.rs
